# CUDAGeneral

./: CMakeLists.txt  iris.cu  iris.out  life.out  lifeExp.cu  main.cu  multVarLifeExp.cu
OpenGLforPIPI/: CMakeLists.txt  conejito.cu  kernel.cu  kubo.cu  tirangulito.out
